Fix the text overflow in title of the poll

--- a/frontend/polling_app/src/app/components/shared-components/side-navigator/side-navigator.component.css
+++ b/frontend/polling_app/src/app/components/shared-components/side-navigator/side-navigator.component.css
@@ -16,6 +16,7 @@ mat-sidenav{
 /* Content area */
 mat-sidenav-content{
     width: 100%;
+    background-color: #fafafa;
 }
 
 mat-nav-list{
