--- a/frontend/polling_app/src/app/pages/polls/components/card/card.component.css
+++ b/frontend/polling_app/src/app/pages/polls/components/card/card.component.css
@@ -1,7 +1,8 @@
 .card {
-    width: 200px;
+    width: 12.5rem;
     margin: 0.5rem 0.75rem;
-    height: auto;
+    padding: 1rem;
+    height: 18rem; 
 }
   
 .example-header-image {
@@ -10,27 +11,50 @@
 }
 
 
+.mat-card-actions{
+    margin: 0px !important;
+    padding: 0px;
+    text-align: center;
+}
+
+.mat-card-content{
+    margin-bottom: 0.5rem;
+}
+
 #startDate, #endDate{
     margin-bottom: 0px;
     text-align: center;
-    margin: 0px -16px;
+    margin: 0px -1rem;
     background-color: #f0f2f5;
+    font-size: 0.75rem;
 }
 
 .fake-image{
-    width: auto;
-    height: 150px;
-    background-color: lightblue;
+    /* Center content x and y */
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0px -16px;
-    overflow-y: auto;
+
+    width: auto;
+    height: 9.25rem;
+    margin: 0rem -1rem;
+    background-color: lightblue;
 }
 
 .poll-title{
-    margin: 0rem 2rem;
+    width: auto;
+    margin: 1.5rem 2rem;
     text-align: center;
-    max-height: 100%;
+    font-size: 1rem;
+    font-weight: 300;
+
+    /* Line clamp */
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 5;
+    -webkit-box-orient: vertical;  
+
 }
+
+
 
